2005-11-13  Andras Simon <andras@renyi.hu>

	* swank-abcl.lisp: (accept-connection): New argument: buffering.

2005-11-13  Andras Simon <andras@renyi.hu>

	* swank-abcl.lisp: Steal auto-flush stuff from swank-sbcl.lisp

2005-11-11  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*dedicated-output-stream-buffering*): New variable
	to customize the buffering scheme.  For single-threaded Lisps we
	disable buffering because lazy programmers forget to call
	finish-output.
	(open-dedicated-output-stream): Use it.

	* swank-backend.lisp, swank-allegro.lisp, swank-lispworks.lisp,
	swank-openmcl.lisp, swank-cmucl.lisp, swank-sbcl.lisp,
	swank-clisp.lisp, swank-abcl.lisp, swank-corman.lisp,
	swank-ecl.lisp (accept-connection): New argument: buffering.

	* slime.el (slime-repl-save-history): When the history exceeds
	slime-repl-history-size remove the old not the new entries.  
	Some renaming: 
	slime-repl-read-history -> slime-repl-load-history,
	slime-repl-read-history-internal -> slime-repl-read-history.
	(slime-eval-macroexpand): Call font-lock-fontify-buffer
	explicitly, because with certain Emacs versions the buffer doesn't
	get fontified immediately.

2005-11-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-eval-macroexpand): Use lisp-mode (and
	font-lock-mode) when dispaying the expansion.  Suggested by Jan
	Rychter.

	* swank-source-path-parser.lisp (make-source-recording-readtable):
	Suppress the #. reader-macro.

2005-11-06  Juho Snellman <jsnell@iki.fi>

	* swank-sbcl.lisp (find-definitions, make-source-location-specification
          make-definition-source-location, source-hint-snippet): As of
          SBCL 0.9.6.25 SB-INTROSPECT has better support for finding 
          source locations. Use as much of it in swank-sbcl as possible.
          (Original version left reader-conditionalized for older SBCLs).

2005-11-04  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (connection-info): Docfix.
